fixed dot and special effects not visually updating on duration decrement  combat encounter changes   - action abstract class added for inventory objects that are also considered actions     - changed selectedAction in combat encounter from Inventory to Action Type   - cooldown functionality added and checking if action is ready to be used      - message shown if action still on cooldown attempting to be performed   - next turn for combat ordering will find the first alive characterEntity for the next turn start screen background added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.InventoryInfoActivity"></activity>
         <activity android:name=".view.characterchoice.CharacterChoiceActivity" />
         <activity android:name=".view.MainGameActivity" />
         <activity android:name=".view.MainActivity">
