--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.aviran.cookiebar2:cookiebar2:1.1.4'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-alpha06'
     implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0-alpha06'
