--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.shopgrid.BuyInformationActivity" />
-        <activity android:name=".view.shopgrid.SellInformationActivity" />
+        <activity android:name=".view.inventoryinfo.BuyInformationActivity" />
+        <activity android:name=".view.inventoryinfo.SellInformationActivity" />
+        <activity android:name=".view.inventoryinfo.InventoryInfoDisplay" />
 
         <meta-data
             android:name="preloaded_fonts"
