--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.aviran.cookiebar2:cookiebar2:1.1.4'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-alpha06'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0-alpha06'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
