added aoe functionality of Abilities and Special Attacks  - removed the aoe values from Ability and special attack class and database table Added info clickers to the Inventory lists in CharacterFragment to open InventoryInfoActivity changed dialogue observers for abilities to look at specific ObservableField for adding and removing ability  - couldn't retrieve the Ability of ObservableArrayList after deleted

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.deathscreen.DeathScreenActivity"></activity>
         <activity android:name=".view.inventoryinfo.InventoryInfoActivity" />
         <activity android:name=".view.characterchoice.CharacterChoiceActivity" />
         <activity android:name=".view.MainGameActivity" />
